test_suite/tests/ui/fail/invalid_arg_count_in_option/invalid_option_option_max.rs
use clapi::macros::*;

#[command]
#[option(value, max=2)]
fn test(value: Option<usize>){}

fn main(){}