test_suite/tests/ui/fail/invalid_arg_count_in_option/invalid_option_option_max.stderr
error: custom attribute panicked
 --> $DIR/invalid_option_option_max.rs:3:1
  |
3 | #[command]
  | ^^^^^^^^^^
  |
  = help: message: invalid number of arguments for `value : Option<usize>` expected from 0 to 1
